# codex

./: AZURE_BACKUP_SAP_ASE_API_COMPLETE.md  AZURE_BACKUP_SAP_ASE_SUMMARY.md  AZURE_DEVOPS_INTEGRATION.md  AZURE_DEVOPS_MCP_SERVER_FINAL.md  AZURE_DEVOPS_MCP_SERVER_SUMMARY.md  AZURE_DEVOPS_NEXT_STEPS.md  AZURE_DEVOPS_OAUTH_DEMO.md  AZURE_DEVOPS_OAUTH_IMPLEMENTATION.md  AZURE_DEVOPS_OAUTH_SOLUTION.md  AZURE_DEVOPS_README_UPDATE.md  AZURE_DEVOPS_TOOL_FIX.md  AZURE_DEVOPS_USAGE.md  AZURE_QUICKSTART.md  BUILD_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  CODE_ANALYSIS_MCP_SERVER_CLI_IMPLEMENTATION.md  CROSS_PROJECT_ARCHITECTURE_DETAILED.md  CROSS_PROJECT_RELATED_FILES_FIX_PLAN.md  CROSS_PROJECT_TEST_FINAL_SUMMARY.md  DATABASE_WORKLOAD_IMPLEMENTATION_COMPLETE.md  FINAL_TEST_RUNNING_GUIDE.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  KUSTO_AUTHENTICATION_FIX.md  KUSTO_AUTO_DISCOVERY_ENHANCEMENT.md  KUSTO_DEBUGGING_GUIDE.md  KUSTO_ENHANCED_FEATURES.md  KUSTO_INTEGRATION.md  KUSTO_LIST_TABLES_FIX.md  KUSTO_MCP_SERVER_FINAL.md  KUSTO_MCP_SERVER_SUMMARY.md  KUSTO_OAUTH_IMPLEMENTATION.md  KUSTO_SDK_INTEGRATION_COMPLETE.md  KUSTO_TOOL_FIX.md  LLM_SEMANTIC_GRAPH_IMPLEMENTATION_PLAN.md  LLM_SEMANTIC_GRAPH_PHASE1_IMPLEMENTATION.md  LLM_SEMANTIC_GRAPH_PHASE2_IMPLEMENTATION.md  LLM_SEMANTIC_GRAPH_PHASE3_IMPLEMENTATION.md  LLM_SEMANTIC_GRAPH_PHASE4_5_IMPLEMENTATION.md  MCP_SERVER_IMPROVEMENTS_FINAL_SUMMARY.md  MCP_SKELETON_GENERATION_FIX_STATUS.md  (+42 more)
codex-rs/code-analysis-server/: Cargo.toml  README.md  SKELETON_TOOLS_UPDATE.md  build-windows.sh  build.sh
codex-rs/kusto-server/: Cargo.toml  README.md  (+2 more)
(+264 files in other folders)
