[package]
name = "code-analysis-server"
version = "0.1.0"
edition = "2021"
description = "Standalone code analysis server using the MCP protocol"
authors = ["Codex Contributors"]

[dependencies]
codex-core = { path = "../core" }
mcp-types = { path = "../mcp-types" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tree-sitter = "0.20"
once_cell = "1.18"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[[bin]]
name = "code-analysis-server"
path = "src/main.rs"