[package]
name = "kusto-server"
version = "0.1.0"
edition = "2021"
description = "Standalone Kusto (Azure Data Explorer) server using the MCP protocol"
authors = ["Codex Contributors"]

[dependencies]
codex-core = { path = "../core" }
mcp-types = { path = "../mcp-types" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "kusto-server"
path = "src/main.rs"